--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ReusePatterns = "a39b5e78-89b5-562b-97d8-70689129df0c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
+DataFrames = "1"
 julia = "1"
 
 [extras]
