--- a/EasyJobsBase/Project.toml
+++ b/EasyJobsBase/Project.toml
@@ -9,6 +9,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
+Configurations = "0.17"
 julia = "1"
 
 [extras]
