--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
 EasyJobsBase = "0.2, 0.3, 0.4"
-Query = "1"
+Query = "0.10, 0.11, 0.12, 1"
 Reexport = "1"
 julia = "1"
 
