--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.4.0"
 EasyJobsBase = "db8ca866-b61f-4bd1-a9b9-75c107d645d4"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Thinkers = "6d80a3f9-a943-41fa-97b3-3004c0daf7a3"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
