--- a/Project.toml
+++ b/Project.toml
@@ -11,10 +11,10 @@ Thinkers = "6d80a3f9-a943-41fa-97b3-3004c0daf7a3"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
-EasyJobsBase = "0.2, 0.3, 0.4, 0.5, 0.6"
+EasyJobsBase = "0.6"
 Query = "0.10, 0.11, 0.12, 1"
 Reexport = "1"
-Thinkers = "0.1, 0.2"
+Thinkers = "0.2"
 julia = "1"
 
 [extras]
