--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 EasyJobsBase = "0.9, 0.10"
 Query = "0.10, 0.11, 0.12, 1"
 Reexport = "1"
-Thinkers = "0.2"
+Thinkers = "0.2, 0.3"
 julia = "1"
 
 [extras]
