--- a/EasyJobsBase/Project.toml
+++ b/EasyJobsBase/Project.toml
@@ -9,7 +9,7 @@ Thinkers = "6d80a3f9-a943-41fa-97b3-3004c0daf7a3"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
-Thinkers = "0.2"
+Thinkers = "0.2, 0.3"
 julia = "1"
 
 [extras]
