--- a/EasyJobsBase/Project.toml
+++ b/EasyJobsBase/Project.toml
@@ -5,6 +5,7 @@ version = "0.11.1"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Thinkers = "6d80a3f9-a943-41fa-97b3-3004c0daf7a3"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
