--- a/EasyJobsBase/Project.toml
+++ b/EasyJobsBase/Project.toml
@@ -6,6 +6,7 @@ version = "0.15.0"
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+SumTypes = "8e1ec7a9-0e02-4297-b0fe-6433085c89f2"
 Thinkers = "6d80a3f9-a943-41fa-97b3-3004c0daf7a3"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
