--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Distributed"]
